ndb - bug#44291   Node-state is not propageded to all blocks in ndbmtd   This can cause   - inconsistent REDO when doing graceful shutdown   - crash in Dbtux, when restarting cluster, and some nodes     needs to perform node-recovery during system-restart

Possibly other problems...but they have not been identified